test/input/invalid/function_1.js
function f(arguments) {
}

function g(arguments) {
    "use strict";
}
